# mobile-nodes-communication-system

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.txt  Makefile  README.md  TIN  build.sh  class_diagram.uxf  docker-compose.yaml  install.sh  net-swapper.py
src/: client_app.cpp  main.cpp  message.cpp  message.h  mobile_node.cpp  mobile_node.h  network.cpp  network.h  server_app.cpp
